--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,21 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <hibernate.version>5.1.0.Final</hibernate.version>
+        <hibernate.version>3.0.5</hibernate.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
+            <artifactId>hibernate</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
